# * (c) Copyright 2016 Hewlett Packard Enterprise Development LP
# *
# * Licensed under the Apache License, Version 2.0 (the "License");
# * you may not use this file except in compliance with the License.
# * You may obtain a copy of the License at
# *
# *     http://www.apache.org/licenses/LICENSE-2.0
# *
# * Unless required by applicable law or agreed to in writing, software
# * distributed under the License is distributed on an "AS IS" BASIS,
# * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# * See the License for the specific language governing permissions and
# * limitations under the License.
#

project(firesteel)

set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11 -O3")
set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -O3")
set(GTEST_ROOT ${PROJECT_SOURCE_DIR}/../external/gtest)
set(CMAKE_POSITION_INDEPENDENT_CODE TRUE)
find_library(GTEST_LIBRARY NAME gtest HINTS ${GTEST_ROOT}/build)
if (NOT GTEST_LIBRARY)
  message(STATUS "Google test library not found -- please build in $SPARKLE/external/gtest/build")
endif ()

add_subdirectory(src/main/cpp/rmb)
enable_testing()
add_subdirectory(src/test/cpp)
